# uuagc

todaysplugin/: LICENSE  Setup.lhs  notes  test.sh  todaysplugin.cabal  uuagc_options
todaysplugin/src/: TodaysPlugin.Data.ag  TodaysPlugin.ag
uuagc-0.9.14/: uuagc.cabal-for-ghc-6.6
uuagc-0.9.14/cabal-plugin/src/Distribution/Simple/UUAGC/: #UUAGC.hs#  .#UUAGC.hs  AbsSyn.hs  Parser.hs  UUAGC.hs
uuagc-0.9.14/src/: Version.hs
uuagc-0.9.14/src-derived/: AbstractSyntax.hs  AbstractSyntaxDump.hs  Code.hs  CodeSyntax.hs  CodeSyntaxDump.hs  ConcreteSyntax.hs  DeclBlocks.hs  DefaultRules.hs  Desugar.hs  ErrorMessages.hs  Expression.hs  GenerateCode.hs  HsToken.hs  Interfaces.hs  InterfacesRules.hs  Order.hs  Patterns.hs  PrintCode.hs  PrintErrorMessages.hs  SemHsTokens.hs  TfmToVisage.hs  Transform.hs  Visage.hs  VisagePatterns.hs  VisageSyntax.hs
