Cabal-Version:       >= 1.2
name:                todaysplugin
version:             0.0
synopsis:            Test for the current status of the plugin
description:         Description
category:
license:             BSD3
license-file:        LICENSE
author:              Diego Echeverri
maintainer:          diegoeche@gmail.com
build-type:          Custom

executable todaysplugin
  build-depends:     base, uuagc==0.9.14, Cabal==1.6.0.3
  main-is:           TodaysPlugin.hs
  hs-source-dirs:    src,.
  x-agmodule:        file : "./src/TodaysPlugin.ag"
                     options : data, catas, semfuns

